--- a/README.Rmd
+++ b/README.Rmd
@@ -34,7 +34,9 @@ install.packages("DRtool")
 The development version is available on [Github](https://github.com/JustinMLin/DRtool)
 and can be installed with:
 ``` {r GitHub install, eval=FALSE}
-remotes::install_github("JustinMLin/DRtool")
+# install.packages("devtools")
+
+devtools::install_github("JustinMLin/DRtool")
 ```
 
 ## Example
