--- a/README.Rmd
+++ b/README.Rmd
@@ -26,12 +26,7 @@ signal from byproducts of the dimension reduction process.
 
 ## Installation
 
-**DRtool** is available on CRAN and can be installed with:
-```{r CRAN install, eval=FALSE}
-install.packages("DRtool")
-```
-
-The development version is available on [Github](https://github.com/JustinMLin/DRtool)
+**DRtool** is available at [Github](https://github.com/JustinMLin/DRtool)
 and can be installed with:
 ``` {r GitHub install, eval=FALSE}
 # install.packages("devtools")
